* fix widestring concat multi for winlikewidestring. The     append optimization can't be used in this can because the     trick with refcnt is not supported
git-svn-id: trunk@10327 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7981,6 +7981,7 @@ tests/webtbs/tw10800.pp svneol=native#text/plain
 tests/webtbs/tw10807.pp svneol=native#text/plain
 tests/webtbs/tw1081.pp svneol=native#text/plain
 tests/webtbs/tw10815.pp svneol=native#text/plain
+tests/webtbs/tw10825.pp svneol=native#text/plain
 tests/webtbs/tw1090.pp svneol=native#text/plain
 tests/webtbs/tw1092.pp svneol=native#text/plain
 tests/webtbs/tw1096.pp svneol=native#text/plain
