--- a/.gitattributes
+++ b/.gitattributes
@@ -7981,6 +7981,7 @@ tests/webtbs/tw10736.pp svneol=native#text/plain
 tests/webtbs/tw10753.pp svneol=native#text/plain
 tests/webtbs/tw10753a.pp svneol=native#text/plain
 tests/webtbs/tw10757.pp svneol=native#text/plain
+tests/webtbs/tw10768.pp svneol=native#text/plain
 tests/webtbs/tw10790.pp svneol=native#text/plain
 tests/webtbs/tw10800.pp svneol=native#text/plain
 tests/webtbs/tw10807.pp svneol=native#text/plain
