* increase/decrease refcount of interface value parameters on procedure     entry/exit (mantis #10897)   * fixed tinterface2 which crashed after this change. It also crashed under     Kylix: you cannot assign the result of an interfaced class to a class     instance variable and then use it both as an interface (refcounted) and     as class (non-refcounted)
git-svn-id: trunk@10405 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7991,6 +7991,7 @@ tests/webtbs/tw10815.pp svneol=native#text/plain
 tests/webtbs/tw10825.pp svneol=native#text/plain
 tests/webtbs/tw10833.pp svneol=native#text/plain
 tests/webtbs/tw10890.pp svneol=native#text/plain
+tests/webtbs/tw10897.pp svneol=native#text/plain
 tests/webtbs/tw1090.pp svneol=native#text/plain
 tests/webtbs/tw1092.pp svneol=native#text/plain
 tests/webtbs/tw1096.pp svneol=native#text/plain
