* fixed implements for interfaces + tests for implements through interface
git-svn-id: trunk@10413 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7266,6 +7266,9 @@ tests/test/tgoto.pp svneol=native#text/plain
 tests/test/theap.pp svneol=native#text/plain
 tests/test/theapthread.pp svneol=native#text/plain
 tests/test/thintdir.pp svneol=native#text/plain
+tests/test/timplements1.pp svneol=native#text/plain
+tests/test/timplements2.pp svneol=native#text/plain
+tests/test/timplements3.pp svneol=native#text/plain
 tests/test/timplprog.pp svneol=native#text/plain
 tests/test/tindex.pp svneol=native#text/plain
 tests/test/tinivar.pp svneol=native#text/plain
