+ more implements tests
git-svn-id: trunk@10417 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7270,6 +7270,8 @@ tests/test/timplements1.pp svneol=native#text/plain
 tests/test/timplements2.pp svneol=native#text/plain
 tests/test/timplements3.pp svneol=native#text/plain
 tests/test/timplements4.pp svneol=native#text/plain
+tests/test/timplements4a.pp svneol=native#text/plain
+tests/test/timplements4b.pp svneol=native#text/plain
 tests/test/timplprog.pp svneol=native#text/plain
 tests/test/tindex.pp svneol=native#text/plain
 tests/test/tinivar.pp svneol=native#text/plain
