* call taddnode.simplify at the very end of taddnode.pass_typecheck, so     it doesn't have to duplicate any type checking code, and so constant     expressions get the same resultdefs as non-constant expressions   * properly fixed resultdef determination of "set + setelementn" (follows     same rules now as "set + set")   * also convert "longint or/xor cardinal" to int64 (needed for correct     results with negative numbers and Delphi-compatible) + test   * extended 64-to-32 type conversion simplification to also handle     or/xor nodes (so if the result is typecasted back to 32 bit, the     evaluation can still be done entirely in 32 bit). These changes also     enable that optimization in some extra cases (not just anymore for     expressions containing only uint32)
git-svn-id: trunk@10418 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -6853,6 +6853,7 @@ tests/test/cg/ptest.pp svneol=native#text/plain
 tests/test/cg/taddbool.pp svneol=native#text/plain
 tests/test/cg/taddcard.pp svneol=native#text/plain
 tests/test/cg/taddcurr.pp svneol=native#text/plain
+tests/test/cg/taddint.pp svneol=native#text/plain
 tests/test/cg/taddlong.pp svneol=native#text/plain
 tests/test/cg/taddr1.pp svneol=native#text/plain
 tests/test/cg/taddr2.pp svneol=native#text/plain
