* don't allow passing ordinal and real constants to formal const parameters
git-svn-id: trunk@10426 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -6395,7 +6395,6 @@ tests/tbs/tb0202.pp svneol=native#text/plain
 tests/tbs/tb0203.pp svneol=native#text/plain
 tests/tbs/tb0204.pp svneol=native#text/plain
 tests/tbs/tb0205.pp svneol=native#text/plain
-tests/tbs/tb0206.pp svneol=native#text/plain
 tests/tbs/tb0207.pp svneol=native#text/plain
 tests/tbs/tb0208.pp svneol=native#text/plain
 tests/tbs/tb0209.pp svneol=native#text/plain
@@ -7843,6 +7842,7 @@ tests/webtbf/tw8780a.pp svneol=native#text/plain
 tests/webtbf/tw8780b.pp svneol=native#text/plain
 tests/webtbf/tw8780c.pp svneol=native#text/plain
 tests/webtbf/tw8781.pp svneol=native#text/plain
+tests/webtbf/tw9015.pp svneol=native#text/plain
 tests/webtbf/tw9039a.pp svneol=native#text/plain
 tests/webtbf/tw9039b.pp svneol=native#text/plain
 tests/webtbf/tw9039c.pp svneol=native#text/plain
