* the result of not(dword(ordconst)) has to be dword as well for Delphi     compatibility (and to avoid range errors like in mantis #10931)
git-svn-id: trunk@10451 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8007,6 +8007,7 @@ tests/webtbs/tw10897.pp svneol=native#text/plain
 tests/webtbs/tw1090.pp svneol=native#text/plain
 tests/webtbs/tw1092.pp svneol=native#text/plain
 tests/webtbs/tw10920.pp svneol=native#text/plain
+tests/webtbs/tw10931.pp svneol=native#text/plain
 tests/webtbs/tw1096.pp svneol=native#text/plain
 tests/webtbs/tw1097.pp svneol=native#text/plain
 tests/webtbs/tw1103.pp svneol=native#text/plain
