* make result of not(constant) (with constant type <= sinttype)     equal to sinttype (Delphi-compatible, fixes #10966)   * changed not(cardinal_constant) into sinttype on 64 bit     platforms for consistency with other similar rules (and with     the above change)
git-svn-id: trunk@10455 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8010,6 +8010,7 @@ tests/webtbs/tw1092.pp svneol=native#text/plain
 tests/webtbs/tw10920.pp svneol=native#text/plain
 tests/webtbs/tw10931.pp svneol=native#text/plain
 tests/webtbs/tw1096.pp svneol=native#text/plain
+tests/webtbs/tw10966.pp svneol=native#text/plain
 tests/webtbs/tw1097.pp svneol=native#text/plain
 tests/webtbs/tw1103.pp svneol=native#text/plain
 tests/webtbs/tw1104.pp svneol=native#text/plain
