* fixed "inherited some_property" constructs for getters/setters     (mantis #10927)   * extended the tb0259 test a bit (tests similar constructs in     case there is no getter/setter)
git-svn-id: trunk@10456 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8008,6 +8008,7 @@ tests/webtbs/tw10897.pp svneol=native#text/plain
 tests/webtbs/tw1090.pp svneol=native#text/plain
 tests/webtbs/tw1092.pp svneol=native#text/plain
 tests/webtbs/tw10920.pp svneol=native#text/plain
+tests/webtbs/tw10927.pp svneol=native#text/plain
 tests/webtbs/tw10931.pp svneol=native#text/plain
 tests/webtbs/tw1096.pp svneol=native#text/plain
 tests/webtbs/tw10966.pp svneol=native#text/plain
