- revert fix for #10927: the old behaviour was Delphi compatible,     and the fix caused other problems (#10979)
git-svn-id: trunk@10464 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8013,6 +8013,7 @@ tests/webtbs/tw10931.pp svneol=native#text/plain
 tests/webtbs/tw1096.pp svneol=native#text/plain
 tests/webtbs/tw10966.pp svneol=native#text/plain
 tests/webtbs/tw1097.pp svneol=native#text/plain
+tests/webtbs/tw10979.pp svneol=native#text/plain
 tests/webtbs/tw1103.pp svneol=native#text/plain
 tests/webtbs/tw1104.pp svneol=native#text/plain
 tests/webtbs/tw1111.pp svneol=native#text/plain
