--- a/.gitattributes
+++ b/.gitattributes
@@ -8918,6 +8918,9 @@ tests/webtbs/tw8677.pp svneol=native#text/plain
 tests/webtbs/tw8678.pp svneol=native#text/plain
 tests/webtbs/tw8678a.pp svneol=native#text/plain
 tests/webtbs/tw8685.pp svneol=native#text/plain
+tests/webtbs/tw8730a.pp svneol=native#text/plain
+tests/webtbs/tw8730b.pp svneol=native#text/plain
+tests/webtbs/tw8730c.pp svneol=native#text/plain
 tests/webtbs/tw8757.pp svneol=native#text/plain
 tests/webtbs/tw8777f.pp svneol=native#text/plain
 tests/webtbs/tw8777g.pp svneol=native#text/plain
@@ -9045,6 +9048,8 @@ tests/webtbs/uw6767.pp svneol=native#text/plain
 tests/webtbs/uw7381.pp svneol=native#text/plain
 tests/webtbs/uw8180.pp svneol=native#text/plain
 tests/webtbs/uw8372.pp svneol=native#text/plain
+tests/webtbs/uw8730a.pp svneol=native#text/plain
+tests/webtbs/uw8730b.pp svneol=native#text/plain
 tests/webtbs/uw9113a.pp svneol=native#text/plain
 tests/webtbs/uw9113b.pp svneol=native#text/plain
 utils/Makefile svneol=native#text/plain
