* allocate .bss entries manual so we can take care of alignment   * disable COMMON symbol code, it might be needed again for ELF package     support (.comm for ELF supports alignment)
git-svn-id: trunk@10549 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8108,6 +8108,8 @@ tests/webtbs/tw11006.pp svneol=native#text/plain
 tests/webtbs/tw11027.pp svneol=native#text/plain
 tests/webtbs/tw1103.pp svneol=native#text/plain
 tests/webtbs/tw11033.pp svneol=native#text/plain
+tests/webtbs/tw11039a.pp svneol=native#text/plain
+tests/webtbs/tw11039b.pp svneol=native#text/plain
 tests/webtbs/tw1104.pp svneol=native#text/plain
 tests/webtbs/tw1111.pp svneol=native#text/plain
 tests/webtbs/tw1117.pp svneol=native#text/plain
