* factored unix exports handling from t_bsd and t_linux into expunix unit     (todo: at least solaris, maybe others)   * changed the "exports" section handling:     a) make everything private which is not exported (implemented for        darwin and linux)     b) for the exported symbols:      - functions/procedures       1) if no name or index is provided, and if the procedure has aliases          defined via the public/export directives, then export the default          mangled name and all defined aliases       2) otherwise if no name is specified (but there is an index) then         i) if the procedure is defined as cdecl/cppdecl/mwpascal, use the            appropriately mangled version of the function name        ii) otherwise export the name without any mangling(e.g. "exports            proc1" -> proc1 is the exported name)      - variables       1) if no name is provided and the variable was specified as cvar,          use the mangled name       2) otherwise if no name is provided, export the name without any          mangling   -> initialization/finalization of shared libraries under Linux works      again (mantis #7838)   -> sharing symbols between shared library and main program works      under Linux (mantis #9089)
git-svn-id: trunk@10551 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -135,6 +135,7 @@ compiler/dbgstabs.pas svneol=native#text/plain
 compiler/defcmp.pas svneol=native#text/plain
 compiler/defutil.pas svneol=native#text/plain
 compiler/export.pas svneol=native#text/plain
+compiler/expunix.pp svneol=native#text/plain
 compiler/finput.pas svneol=native#text/plain
 compiler/fmodule.pas svneol=native#text/plain
 compiler/fpccrc.pas svneol=native#text/plain
@@ -8848,6 +8849,8 @@ tests/webtbs/tw7806.pp svneol=native#text/plain
 tests/webtbs/tw7808.pp svneol=native#text/plain
 tests/webtbs/tw7817a.pp svneol=native#text/plain
 tests/webtbs/tw7817b.pp svneol=native#text/plain
+tests/webtbs/tw7838a.pp svneol=native#text/plain
+tests/webtbs/tw7838b.pp svneol=native#text/plain
 tests/webtbs/tw7847.pp svneol=native#text/plain
 tests/webtbs/tw7851.pp svneol=native#text/plain
 tests/webtbs/tw7851a.pp svneol=native#text/plain
@@ -8951,6 +8954,10 @@ tests/webtbs/tw9073.pp svneol=native#text/plain
 tests/webtbs/tw9076.pp svneol=native#text/plain
 tests/webtbs/tw9076a.pp svneol=native#text/plain
 tests/webtbs/tw9085.pp svneol=native#text/plain
+tests/webtbs/tw9089a.pp svneol=native#text/plain
+tests/webtbs/tw9089b.pp svneol=native#text/plain
+tests/webtbs/tw9089c.pp svneol=native#text/plain
+tests/webtbs/tw9089d.pp svneol=native#text/plain
 tests/webtbs/tw9095.pp svneol=native#text/plain
 tests/webtbs/tw9096.pp svneol=native#text/plain
 tests/webtbs/tw9098.pp svneol=native#text/plain
@@ -9050,6 +9057,7 @@ tests/webtbs/uw4541.pp svneol=native#text/plain
 tests/webtbs/uw6203.pp svneol=native#text/plain
 tests/webtbs/uw6767.pp svneol=native#text/plain
 tests/webtbs/uw7381.pp svneol=native#text/plain
+tests/webtbs/uw7838a.pp svneol=native#text/plain
 tests/webtbs/uw8180.pp svneol=native#text/plain
 tests/webtbs/uw8372.pp svneol=native#text/plain
 tests/webtbs/uw8730a.pp svneol=native#text/plain
