--- a/.gitattributes
+++ b/.gitattributes
@@ -8799,6 +8799,9 @@ tests/webtbs/tw6735.pp svneol=native#text/plain
 tests/webtbs/tw6737.pp -text
 tests/webtbs/tw6742.pp svneol=native#text/plain
 tests/webtbs/tw6767.pp svneol=native#text/plain
+tests/webtbs/tw6822a.pp svneol=native#text/plain
+tests/webtbs/tw6822b.pp svneol=native#text/plain
+tests/webtbs/tw6822c.pp svneol=native#text/plain
 tests/webtbs/tw6865.pp svneol=native#text/plain
 tests/webtbs/tw6868.pp svneol=native#text/plain
 tests/webtbs/tw6960.pp svneol=native#text/plain
@@ -9056,6 +9059,7 @@ tests/webtbs/uw4352e.pp svneol=native#text/plain
 tests/webtbs/uw4541.pp svneol=native#text/plain
 tests/webtbs/uw6203.pp svneol=native#text/plain
 tests/webtbs/uw6767.pp svneol=native#text/plain
+tests/webtbs/uw6822a.pp svneol=native#text/plain
 tests/webtbs/uw7381.pp svneol=native#text/plain
 tests/webtbs/uw7838a.pp svneol=native#text/plain
 tests/webtbs/uw8180.pp svneol=native#text/plain
