--- a/.gitattributes
+++ b/.gitattributes
@@ -8787,6 +8787,8 @@ tests/webtbs/tw6491.pp svneol=native#text/plain
 tests/webtbs/tw6493.pp svneol=native#text/plain
 tests/webtbs/tw6525.pp -text
 tests/webtbs/tw6543.pp svneol=native#text/plain
+tests/webtbs/tw6586a.pp svneol=native#text/plain
+tests/webtbs/tw6586b.pp svneol=native#text/plain
 tests/webtbs/tw6624.pp svneol=native#text/plain
 tests/webtbs/tw6641.pp svneol=native#text/plain
 tests/webtbs/tw6684.pp svneol=native#text/plain
