--- a/.gitattributes
+++ b/.gitattributes
@@ -3219,6 +3219,7 @@ packages/ncurses/examples/ocrt_demo.pp svneol=native#text/plain
 packages/ncurses/examples/screen_demo.pp svneol=native#text/plain
 packages/ncurses/fpmake.pp svneol=native#text/plain
 packages/ncurses/src/eti.inc svneol=native#text/plain
+packages/ncurses/src/form.pp svneol=native#text/plain
 packages/ncurses/src/menu.pp svneol=native#text/plain
 packages/ncurses/src/ncrt.inc svneol=native#text/plain
 packages/ncurses/src/ncrt.pp svneol=native#text/plain
@@ -3227,7 +3228,18 @@ packages/ncurses/src/ocrt.pp svneol=native#text/plain
 packages/ncurses/src/panel.pp svneol=native#text/plain
 packages/ncurses/src/pxpic.inc svneol=native#text/plain
 packages/ncurses/src/pxpic.txt svneol=native#text/plain
+packages/ncurses/tests/cotest.pp svneol=native#text/plain
+packages/ncurses/tests/t1form.pp svneol=native#text/plain
+packages/ncurses/tests/t1menu.pp svneol=native#text/plain
+packages/ncurses/tests/t2form.pp svneol=native#text/plain
+packages/ncurses/tests/t2menu.pp svneol=native#text/plain
+packages/ncurses/tests/t3form.pp svneol=native#text/plain
+packages/ncurses/tests/tbackground.pp svneol=native#text/plain
+packages/ncurses/tests/tclock.pp svneol=native#text/plain
 packages/ncurses/tests/testn.pp svneol=native#text/plain
+packages/ncurses/tests/tevent.pp svneol=native#text/plain
+packages/ncurses/tests/tmouse.pp svneol=native#text/plain
+packages/ncurses/tests/tnlshello.pp svneol=native#text/plain
 packages/newt/Makefile svneol=native#text/plain
 packages/newt/Makefile.fpc svneol=native#text/plain
 packages/newt/README svneol=native#text/plain
