* Added Regex unit with an NFA regexpression parser, based on code from Julian Bucknall which is used with his permission  * Added RegExprCompat unit which contains an interface to the Regex unit which is compatible with the existing RegExpr unit  * Added some more tests and added a define UseRegexCompat to make it possible to choose what regex-implementation to test. Test which fail on the existing regex-parser are placed between ifdefs
git-svn-id: trunk@10611 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3980,7 +3980,9 @@ packages/pxlib/src/pxlib.pp svneol=native#text/plain
 packages/regexpr/Makefile svneol=native#text/plain
 packages/regexpr/Makefile.fpc svneol=native#text/plain
 packages/regexpr/fpmake.pp svneol=native#text/plain
+packages/regexpr/src/regex.pp svneol=native#text/plain
 packages/regexpr/src/regexpr.pp svneol=native#text/plain
+packages/regexpr/src/regexprcompat.pp svneol=native#text/plain
 packages/regexpr/tests/testreg1.pp svneol=native#text/plain
 packages/rexx/Makefile svneol=native#text/plain
 packages/rexx/Makefile.fpc svneol=native#text/plain
