* manual merge of dbcoll which was missed by rev. 10723
git-svn-id: branches/fixes_2_2@10738 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1116,6 +1116,7 @@ packages/fcl-db/src/base/database.inc svneol=native#text/plain
 packages/fcl-db/src/base/dataset.inc svneol=native#text/plain
 packages/fcl-db/src/base/datasource.inc svneol=native#text/plain
 packages/fcl-db/src/base/db.pas svneol=native#text/plain
+packages/fcl-db/src/base/dbcoll.pp svneol=native#text/plain
 packages/fcl-db/src/base/dbconst.pas svneol=native#text/plain
 packages/fcl-db/src/base/dbwhtml.pp svneol=native#text/plain
 packages/fcl-db/src/base/dsparams.inc svneol=native#text/plain
