* Updated header translations from Luiz. Now should work for win32 too
git-svn-id: trunk@10854 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -921,6 +921,9 @@ packages/cairo/Makefile svneol=native#text/plain
 packages/cairo/Makefile.fpc svneol=native#text/plain
 packages/cairo/fpmake.pp svneol=native#text/plain
 packages/cairo/src/cairo.pp svneol=native#text/plain
+packages/cairo/src/cairoft.pp svneol=native#text/plain
+packages/cairo/src/cairowin32.pp svneol=native#text/plain
+packages/cairo/src/cairoxlib.pp svneol=native#text/plain
 packages/cdrom/Makefile svneol=native#text/plain
 packages/cdrom/Makefile.fpc svneol=native#text/plain
 packages/cdrom/README svneol=native#text/plain
