--- a/.gitattributes
+++ b/.gitattributes
@@ -7757,6 +7757,7 @@ tests/webtbf/tw10457.pp svneol=native#text/plain
 tests/webtbf/tw10833a.pp svneol=native#text/plain
 tests/webtbf/tw10849.pp svneol=native#text/plain
 tests/webtbf/tw10890a.pp svneol=native#text/plain
+tests/webtbf/tw10998a.pp svneol=native#text/plain
 tests/webtbf/tw1157a.pp svneol=native#text/plain
 tests/webtbf/tw1238.pp svneol=native#text/plain
 tests/webtbf/tw1251a.pp svneol=native#text/plain
