* Examples from 10820. Russian one needs testing. Makefile will follow
git-svn-id: trunk@10878 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3219,7 +3219,23 @@ packages/ncurses/examples/edit_demo.pp svneol=native#text/plain
 packages/ncurses/examples/firework.pp svneol=native#text/plain
 packages/ncurses/examples/menu_demo.pp svneol=native#text/plain
 packages/ncurses/examples/ocrt_demo.pp svneol=native#text/plain
+packages/ncurses/examples/ru/messages.mo -text
 packages/ncurses/examples/screen_demo.pp svneol=native#text/plain
+packages/ncurses/examples/t1form.pp svneol=native#text/plain
+packages/ncurses/examples/t1menu.pp svneol=native#text/plain
+packages/ncurses/examples/t1panel.pp svneol=native#text/plain
+packages/ncurses/examples/t2form.pp svneol=native#text/plain
+packages/ncurses/examples/t2menu.pp svneol=native#text/plain
+packages/ncurses/examples/t2panel.pp svneol=native#text/plain
+packages/ncurses/examples/t3form.pp svneol=native#text/plain
+packages/ncurses/examples/tbackground.pp svneol=native#text/plain
+packages/ncurses/examples/tclock.pp svneol=native#text/plain
+packages/ncurses/examples/tevent.pp svneol=native#text/plain
+packages/ncurses/examples/tmouse.pp svneol=native#text/plain
+packages/ncurses/examples/tnlshello.pp svneol=native#text/plain
+packages/ncurses/examples/tnlshello_ru_UTF8.pot svneol=native#text/plain
+packages/ncurses/examples/tpad.pp svneol=native#text/plain
+packages/ncurses/examples/twindow.pp svneol=native#text/plain
 packages/ncurses/fpmake.pp svneol=native#text/plain
 packages/ncurses/src/eti.inc svneol=native#text/plain
 packages/ncurses/src/form.pp svneol=native#text/plain
