--- a/.gitattributes
+++ b/.gitattributes
@@ -8859,6 +8859,7 @@ tests/webtbs/tw6735.pp svneol=native#text/plain
 tests/webtbs/tw6737.pp -text
 tests/webtbs/tw6742.pp svneol=native#text/plain
 tests/webtbs/tw6767.pp svneol=native#text/plain
+tests/webtbs/tw6769.pp svneol=native#text/plain
 tests/webtbs/tw6822a.pp svneol=native#text/plain
 tests/webtbs/tw6822b.pp svneol=native#text/plain
 tests/webtbs/tw6822c.pp svneol=native#text/plain
