--- a/.gitattributes
+++ b/.gitattributes
@@ -4444,16 +4444,16 @@ packages/uuid/src/libuuid.pp svneol=native#text/plain
 packages/uuid/src/macuuid.pp svneol=native#text/plain
 packages/uuid/tests/testlibuid.pp svneol=native#text/plain
 packages/uuid/tests/testuid.pp svneol=native#text/plain
-packages/winceunits/src/aygshell.inc svneol=native#text/plain
-packages/winceunits/src/ceshell.inc svneol=native#text/plain
-packages/winceunits/src/commctrl.inc svneol=native#text/plain
-packages/winceunits/src/commdlg.inc svneol=native#text/plain
-packages/winceunits/src/iphlpapi.inc svneol=native#text/plain
-packages/winceunits/src/notify.inc svneol=native#text/plain
-packages/winceunits/src/oleaut32.inc svneol=native#text/plain
-packages/winceunits/src/power.inc svneol=native#text/plain
-packages/winceunits/src/simmgr.inc svneol=native#text/plain
-packages/winceunits/src/tapi.inc svneol=native#text/plain
+packages/winceunits/src/aygshell.pp svneol=native#text/plain
+packages/winceunits/src/commctrl.pp svneol=native#text/plain
+packages/winceunits/src/commdlg.pp svneol=native#text/plain
+packages/winceunits/src/iphlpapi.pp svneol=native#text/plain
+packages/winceunits/src/notify.pp svneol=native#text/plain
+packages/winceunits/src/oleaut32.pp svneol=native#text/plain
+packages/winceunits/src/power.pp svneol=native#text/plain
+packages/winceunits/src/shellapi.pp svneol=native#text/plain
+packages/winceunits/src/simmgr.pp svneol=native#text/plain
+packages/winceunits/src/tapi.pp svneol=native#text/plain
 packages/winunits-base/Makefile svneol=native#text/plain
 packages/winunits-base/Makefile.fpc svneol=native#text/plain
 packages/winunits-base/fpmake.pp svneol=native#text/plain
