* Fixed winceunits sources and added them to build.
git-svn-id: trunk@10900 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4444,7 +4444,10 @@ packages/uuid/src/libuuid.pp svneol=native#text/plain
 packages/uuid/src/macuuid.pp svneol=native#text/plain
 packages/uuid/tests/testlibuid.pp svneol=native#text/plain
 packages/uuid/tests/testuid.pp svneol=native#text/plain
+packages/winceunits/Makefile svneol=native#text/plain
+packages/winceunits/Makefile.fpc svneol=native#text/plain
 packages/winceunits/src/aygshell.pp svneol=native#text/plain
+packages/winceunits/src/buildwinceunits.pp svneol=native#text/plain
 packages/winceunits/src/commctrl.pp svneol=native#text/plain
 packages/winceunits/src/commdlg.pp svneol=native#text/plain
 packages/winceunits/src/iphlpapi.pp svneol=native#text/plain
