--- a/.gitattributes
+++ b/.gitattributes
@@ -4448,6 +4448,7 @@ packages/winceunits/Makefile svneol=native#text/plain
 packages/winceunits/Makefile.fpc svneol=native#text/plain
 packages/winceunits/src/aygshell.pp svneol=native#text/plain
 packages/winceunits/src/buildwinceunits.pp svneol=native#text/plain
+packages/winceunits/src/cesync.pp svneol=native#text/plain
 packages/winceunits/src/commctrl.pp svneol=native#text/plain
 packages/winceunits/src/commdlg.pp svneol=native#text/plain
 packages/winceunits/src/gpsapi.pp svneol=native#text/plain
@@ -4455,10 +4456,12 @@ packages/winceunits/src/iphlpapi.pp svneol=native#text/plain
 packages/winceunits/src/notify.pp svneol=native#text/plain
 packages/winceunits/src/oleaut32.pp svneol=native#text/plain
 packages/winceunits/src/power.pp svneol=native#text/plain
+packages/winceunits/src/rapi.pp svneol=native#text/plain
 packages/winceunits/src/shellapi.pp svneol=native#text/plain
 packages/winceunits/src/simmgr.pp svneol=native#text/plain
 packages/winceunits/src/tapi.pp svneol=native#text/plain
 packages/winceunits/src/todaycmn.pp svneol=native#text/plain
+packages/winceunits/src/windbase.pp svneol=native#text/plain
 packages/winunits-base/Makefile svneol=native#text/plain
 packages/winunits-base/Makefile.fpc svneol=native#text/plain
 packages/winunits-base/fpmake.pp svneol=native#text/plain
