* Moved gx to packages.
git-svn-id: trunk@10903 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4452,6 +4452,7 @@ packages/winceunits/src/cesync.pp svneol=native#text/plain
 packages/winceunits/src/commctrl.pp svneol=native#text/plain
 packages/winceunits/src/commdlg.pp svneol=native#text/plain
 packages/winceunits/src/gpsapi.pp svneol=native#text/plain
+packages/winceunits/src/gx.pp svneol=native#text/plain
 packages/winceunits/src/iphlpapi.pp svneol=native#text/plain
 packages/winceunits/src/notify.pp svneol=native#text/plain
 packages/winceunits/src/oleaut32.pp svneol=native#text/plain
@@ -5992,7 +5993,6 @@ rtl/wince/Makefile.fpc svneol=native#text/plain
 rtl/wince/classes.pp svneol=native#text/plain
 rtl/wince/dos.pp svneol=native#text/plain
 rtl/wince/dynlibs.inc svneol=native#text/plain
-rtl/wince/gx.pp svneol=native#text/plain
 rtl/wince/messages.pp svneol=native#text/plain
 rtl/wince/readme.txt svneol=native#text/plain
 rtl/wince/system.pp svneol=native#text/plain
