* fixed wrong internal error in case a swapped set <op> setelement     addnode was processed after r10432/10433 (mantis #11255)
git-svn-id: trunk@10904 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8185,6 +8185,7 @@ tests/webtbs/tw1122.pp svneol=native#text/plain
 tests/webtbs/tw1123.pp svneol=native#text/plain
 tests/webtbs/tw1124.pp svneol=native#text/plain
 tests/webtbs/tw11254.pp svneol=native#text/plain
+tests/webtbs/tw11255.pp svneol=native#text/plain
 tests/webtbs/tw1132.pp svneol=native#text/plain
 tests/webtbs/tw1133.pp svneol=native#text/plain
 tests/webtbs/tw1152.pp svneol=native#text/plain
