+ support of -Mxxx or $modeswitch to enable single mode specific features
git-svn-id: trunk@10936 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -6324,6 +6324,8 @@ tests/tbf/tb0203.pp svneol=native#text/plain
 tests/tbf/tb0204.pp svneol=native#text/plain
 tests/tbf/tb0204a.pp svneol=native#text/plain
 tests/tbf/tb0205.pp svneol=native#text/plain
+tests/tbf/tb0206.pp svneol=native#text/plain
+tests/tbf/tb0207.pp svneol=native#text/plain
 tests/tbf/ub0115.pp svneol=native#text/plain
 tests/tbf/ub0149.pp svneol=native#text/plain
 tests/tbf/ub0158a.pp svneol=native#text/plain
@@ -6867,6 +6869,10 @@ tests/tbs/tb0545.pp svneol=native#text/plain
 tests/tbs/tb0546.pp svneol=native#text/plain
 tests/tbs/tb0547.pp svneol=native#text/plain
 tests/tbs/tb0548.pp svneol=native#text/plain
+tests/tbs/tb0549.pp svneol=native#text/plain
+tests/tbs/tb0550.pp svneol=native#text/plain
+tests/tbs/tb0550a.pp svneol=native#text/plain
+tests/tbs/tb0550b.pp svneol=native#text/plain
 tests/tbs/tb205.pp svneol=native#text/plain
 tests/tbs/ub0060.pp svneol=native#text/plain
 tests/tbs/ub0069.pp svneol=native#text/plain
