* don't crash on empty ProcDefs when handling interfaces, resolves #11295
git-svn-id: trunk@10978 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8206,6 +8206,8 @@ tests/webtbs/tw11254.pp svneol=native#text/plain
 tests/webtbs/tw11255.pp svneol=native#text/plain
 tests/webtbs/tw11288.pp svneol=native#text/plain
 tests/webtbs/tw11290.pp svneol=native#text/plain
+tests/webtbs/tw11295a.pp svneol=native#text/plain
+tests/webtbs/tw11295b.pp svneol=native#text/plain
 tests/webtbs/tw1132.pp svneol=native#text/plain
 tests/webtbs/tw1133.pp svneol=native#text/plain
 tests/webtbs/tw1152.pp svneol=native#text/plain
