--- a/.gitattributes
+++ b/.gitattributes
@@ -7798,6 +7798,8 @@ tests/webtbf/tw10849.pp svneol=native#text/plain
 tests/webtbf/tw10890a.pp svneol=native#text/plain
 tests/webtbf/tw10998a.pp svneol=native#text/plain
 tests/webtbf/tw11254a.pp svneol=native#text/plain
+tests/webtbf/tw11295a.pp svneol=native#text/plain
+tests/webtbf/tw11295b.pp svneol=native#text/plain
 tests/webtbf/tw1157a.pp svneol=native#text/plain
 tests/webtbf/tw1238.pp svneol=native#text/plain
 tests/webtbf/tw1251a.pp svneol=native#text/plain
@@ -8206,8 +8208,6 @@ tests/webtbs/tw11254.pp svneol=native#text/plain
 tests/webtbs/tw11255.pp svneol=native#text/plain
 tests/webtbs/tw11288.pp svneol=native#text/plain
 tests/webtbs/tw11290.pp svneol=native#text/plain
-tests/webtbs/tw11295a.pp svneol=native#text/plain
-tests/webtbs/tw11295b.pp svneol=native#text/plain
 tests/webtbs/tw1132.pp svneol=native#text/plain
 tests/webtbs/tw1133.pp svneol=native#text/plain
 tests/webtbs/tw1152.pp svneol=native#text/plain
