--- a/.gitattributes
+++ b/.gitattributes
@@ -489,6 +489,7 @@ compiler/systems/i_embed.pas svneol=native#text/plain
 compiler/systems/i_emx.pas svneol=native#text/plain
 compiler/systems/i_gba.pas svneol=native#text/plain
 compiler/systems/i_go32v2.pas svneol=native#text/plain
+compiler/systems/i_haiku.pas svneol=native#text/plain
 compiler/systems/i_linux.pas svneol=native#text/plain
 compiler/systems/i_macos.pas svneol=native#text/plain
 compiler/systems/i_morph.pas svneol=native#text/plain
@@ -511,6 +512,7 @@ compiler/systems/t_embed.pas svneol=native#text/plain
 compiler/systems/t_emx.pas svneol=native#text/plain
 compiler/systems/t_gba.pas svneol=native#text/plain
 compiler/systems/t_go32v2.pas svneol=native#text/plain
+compiler/systems/t_haiku.pas svneol=native#text/plain
 compiler/systems/t_linux.pas svneol=native#text/plain
 compiler/systems/t_macos.pas svneol=native#text/plain
 compiler/systems/t_morph.pas svneol=native#text/plain
@@ -1102,6 +1104,7 @@ packages/fcl-base/src/fptimer.pp svneol=native#text/plain
 packages/fcl-base/src/gettext.pp svneol=native#text/plain
 packages/fcl-base/src/go32v2/custapp.inc svneol=native#text/plain
 packages/fcl-base/src/go32v2/eventlog.inc svneol=native#text/plain
+packages/fcl-base/src/haiku/eventlog.inc svneol=native#text/plain
 packages/fcl-base/src/idea.pp svneol=native#text/plain
 packages/fcl-base/src/inicol.pp svneol=native#text/plain
 packages/fcl-base/src/inifiles.pp svneol=native#text/plain
@@ -1483,6 +1486,7 @@ packages/fcl-process/src/dbugintf.pp svneol=native#text/plain
 packages/fcl-process/src/dbugmsg.pp svneol=native#text/plain
 packages/fcl-process/src/go32v2/pipes.inc svneol=native#text/plain
 packages/fcl-process/src/go32v2/process.inc svneol=native#text/plain
+packages/fcl-process/src/haiku/pipes.inc svneol=native#text/plain
 packages/fcl-process/src/morphos/pipes.inc svneol=native#text/plain
 packages/fcl-process/src/morphos/process.inc svneol=native#text/plain
 packages/fcl-process/src/netware/pipes.inc svneol=native#text/plain
@@ -5111,6 +5115,42 @@ rtl/go32v2/v2prt0.as svneol=native#text/plain
 rtl/go32v2/varutils.pp svneol=native#text/plain
 rtl/go32v2/vesamode.pp svneol=native#text/plain
 rtl/go32v2/video.pp svneol=native#text/plain
+rtl/haiku/Makefile.fpc svneol=native#text/plain
+rtl/haiku/baseunix.pp svneol=native#text/plain
+rtl/haiku/bethreads.pp svneol=native#text/plain
+rtl/haiku/classes.pp svneol=native#text/plain
+rtl/haiku/errno.inc svneol=native#text/plain
+rtl/haiku/errnostr.inc svneol=native#text/plain
+rtl/haiku/i386/cprt0.as svneol=native#text/plain
+rtl/haiku/i386/dllprt.as svneol=native#text/plain
+rtl/haiku/i386/dllprt.cpp svneol=native#text/plain
+rtl/haiku/i386/func.as svneol=native#text/plain
+rtl/haiku/i386/prt0.as svneol=native#text/plain
+rtl/haiku/i386/sighnd.inc svneol=native#text/plain
+rtl/haiku/osmacro.inc svneol=native#text/plain
+rtl/haiku/ossysc.inc svneol=native#text/plain
+rtl/haiku/ostypes.inc svneol=native#text/plain
+rtl/haiku/pthread.inc svneol=native#text/plain
+rtl/haiku/ptypes.inc svneol=native#text/plain
+rtl/haiku/settimeo.inc svneol=native#text/plain
+rtl/haiku/signal.inc svneol=native#text/plain
+rtl/haiku/suuid.inc svneol=native#text/plain
+rtl/haiku/syscall.inc svneol=native#text/plain
+rtl/haiku/syscallh.inc svneol=native#text/plain
+rtl/haiku/sysconst.inc svneol=native#text/plain
+rtl/haiku/sysheap.inc svneol=native#text/plain
+rtl/haiku/sysnr.inc svneol=native#text/plain
+rtl/haiku/sysos.inc svneol=native#text/plain
+rtl/haiku/sysosh.inc svneol=native#text/plain
+rtl/haiku/system.pp svneol=native#text/plain
+rtl/haiku/termio.pp svneol=native#text/plain
+rtl/haiku/termios.inc svneol=native#text/plain
+rtl/haiku/termiosproc.inc svneol=native#text/plain
+rtl/haiku/tthread.inc svneol=native#text/plain
+rtl/haiku/unixsock.inc svneol=native#text/plain
+rtl/haiku/unxconst.inc svneol=native#text/plain
+rtl/haiku/unxfunc.inc svneol=native#text/plain
+rtl/haiku/unxsockh.inc svneol=native#text/plain
 rtl/i386/cpu.pp svneol=native#text/plain
 rtl/i386/fastmove.inc svneol=native#text/plain
 rtl/i386/i386.inc svneol=native#text/plain
