--- a/.gitattributes
+++ b/.gitattributes
@@ -5496,6 +5496,7 @@ rtl/netbsd/i386/prt0.as svneol=native#text/plain
 rtl/netbsd/i386/prt0_10.as svneol=native#text/plain
 rtl/netbsd/i386/sighnd.inc svneol=native#text/plain
 rtl/netbsd/pmutext.inc svneol=native#text/plain
+rtl/netbsd/powerpc/bsyscall.inc svneol=native#text/plain
 rtl/netbsd/powerpc/cprt0.as svneol=native#text/plain
 rtl/netbsd/powerpc/prt0.as svneol=native#text/plain
 rtl/netbsd/powerpc/sighnd.inc svneol=native#text/plain
