--- a/.gitattributes
+++ b/.gitattributes
@@ -7516,8 +7516,8 @@ tests/test/tinterface5.pp svneol=native#text/plain
 tests/test/tinterrupt.pp svneol=native#text/plain
 tests/test/tintfdef.pp svneol=native#text/plain
 tests/test/tintuint.pp svneol=native#text/plain
-tests/test/tlib1.pp svneol=native#text/plain
 tests/test/tlib1a.pp svneol=native#text/plain
+tests/test/tlib1b.pp svneol=native#text/plain
 tests/test/tlibrary1.pp svneol=native#text/plain
 tests/test/tlibrary2.pp svneol=native#text/plain
 tests/test/tlibrary3.pp svneol=native#text/plain
