--- a/.gitattributes
+++ b/.gitattributes
@@ -2024,6 +2024,7 @@ packages/gtk1/src/gtk/gtkvscrollbar.pp svneol=native#text/plain
 packages/gtk1/src/gtk/gtkvseparator.pp svneol=native#text/plain
 packages/gtk1/src/gtk/gtkwidget.pp svneol=native#text/plain
 packages/gtk1/src/gtk/gtkwindow.pp svneol=native#text/plain
+packages/gtk1/src/gtkgl/Makefile svneol=native#text/plain
 packages/gtk1/src/gtkgl/Makefile.fpc svneol=native#text/plain
 packages/gtk1/src/gtkgl/gtkglarea.pp svneol=native#text/plain
 packages/gtk2/Makefile svneol=native#text/plain
@@ -5113,6 +5114,7 @@ rtl/go32v2/v2prt0.as svneol=native#text/plain
 rtl/go32v2/varutils.pp svneol=native#text/plain
 rtl/go32v2/vesamode.pp svneol=native#text/plain
 rtl/go32v2/video.pp svneol=native#text/plain
+rtl/haiku/Makefile svneol=native#text/plain
 rtl/haiku/Makefile.fpc svneol=native#text/plain
 rtl/haiku/baseunix.pp svneol=native#text/plain
 rtl/haiku/bethreads.pp svneol=native#text/plain
@@ -9459,6 +9461,7 @@ utils/h2pas/yyparse.cod -text
 utils/kalyptus/kalyptus -text
 utils/kalyptus/kalyptusCxxToPas.pm -text
 utils/kalyptus/kalyptusDataDict.pm -text
+utils/mksymbian/Makefile svneol=native#text/plain
 utils/mksymbian/Makefile.fpc -text
 utils/mksymbian/cfgfile.pas -text
 utils/mksymbian/cmdline.pas -text
